--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" dir="ltr">
+<html lang="en-US">
 
 
 <head>
@@ -40,21 +40,23 @@
     rel="stylesheet">
 -->
   <link href="%PUBLIC_URL%/vendors/simplebar/simplebar.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-  <link href="%PUBLIC_URL%/assets/css/theme-rtl.css" type="text/css" rel="stylesheet" id="style-rtl">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/line.css" type="text/css">
+  <link href="%PUBLIC_URL%/assets/css/theme-rtl.css" type="text/css" disabled="true" rel="stylesheet" id="style-rtl">
   <link href="%PUBLIC_URL%/assets/css/theme.css" type="text/css" rel="stylesheet" id="style-default">
 
-  <script>
+  <!-- <script>
     var phoenixIsRTL = window.config.config.phoenixIsRTL;
     if (phoenixIsRTL) {
+      console.log("vào đây rtl")
       var linkDefault = document.getElementById('style-default');
       linkDefault.setAttribute('disabled', true);
       document.querySelector('html').setAttribute('dir', 'rtl');
     } else {
+      console.log("vào còn lại")
       var linkRTL = document.getElementById('style-rtl');
       linkRTL.setAttribute('disabled', true);
     }
-  </script>
+  </script> -->
   <link href="%PUBLIC_URL%/vendors/leaflet/leaflet.css" rel="stylesheet">
   <link href="%PUBLIC_URL%/vendors/leaflet.markercluster/MarkerCluster.css" rel="stylesheet">
   <link href="%PUBLIC_URL%/vendors/leaflet.markercluster/MarkerCluster.Default.css" rel="stylesheet">
@@ -82,6 +84,7 @@
   <!-- ===============================================-->
   <!--    JavaScripts-->
   <!-- ===============================================-->
+
   <script src="%PUBLIC_URL%/vendors/popper/popper.min.js"></script>
   <script src="%PUBLIC_URL%/vendors/bootstrap/bootstrap.min.js"></script>
   <script src="%PUBLIC_URL%/vendors/anchorjs/anchor.min.js"></script>
@@ -97,6 +100,7 @@
   <script src="%PUBLIC_URL%/vendors/leaflet.markercluster/leaflet.markercluster.js"></script>
   <script src="%PUBLIC_URL%/vendors/leaflet.tilelayer.colorfilter/leaflet-tilelayer-colorfilter.min.js"></script>
   <script src="%PUBLIC_URL%/assets/js/ecommerce-dashboard.js"></script>
+
 </body>
 
 
