--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
   <script src="%PUBLIC_URL%/vendors/leaflet.markercluster/leaflet.markercluster.js"></script>
   <script src="%PUBLIC_URL%/vendors/leaflet.tilelayer.colorfilter/leaflet-tilelayer-colorfilter.min.js"></script>
   <script src="%PUBLIC_URL%/assets/js/ecommerce-dashboard.js"></script>
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAet8Mk1nPvOn_AebLE5ZxXoGejOD8tPzA&libraries=places"></script>
 </body>
 
 
